# diploma

./: requeriments.txt  typing.dnn
Release/: dnn_wrapper.cp312-win_amd64.pyd
csv_fileok/: biometria.csv
diplomawork_wrapper/: CMakeLists.txt  dnn_wrapper.cpp
webservice/: app.py  database.db  dnn_wrapper.cp312-win_amd64.pyd  regi.py  server.py  test.py
webservice/database/: database.csv  free-text-new.csv
webservice/templates/: biometric_test.html
